Fixed bars overlap

--- a/client/views/coursescard/coursescard-chart.css
+++ b/client/views/coursescard/coursescard-chart.css
@@ -124,13 +124,13 @@
   border-left: 1px dashed #d9aebf;
   border-right:1px dashed #d9aebf;
   border-top:  1px dashed #d9aebf;
-  width: 45px;
+  width: 30px;
   align-self: center;
 }
 
 .cc-top {
   background: #b25d7e;
-  width: 45px;
+  width: 30px;
   align-self: center;
 }
 
